--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "json-server": "^0.17.2",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.21",
