--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^4.8.0",
     "react-paginate": "^8.1.4",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "react-transition-group": "^4.4.5",
+    "swiper": "^9.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
